# moviestore_haskell

./: .gitignore  README  README.txt  movies  moviestore.cabal
src/: MovieStoreCLI.hs  Movies.hs
tests/: TestSuite.hs
